# rim

./: .gitignore  CLAUDE.md  Cargo.toml  FEATURES.md  GEMINI.md  README.md  TODO.md
src/: editor.rs  main.rs  terminal.rs
src/application/: commands.rs  editor_service.rs  lsp.rs  mod.rs  normal_commands.rs  normal_mode.rs  position.rs  syntax.rs
src/domain/: editor_model.rs  grapheme.rs  mod.rs  motion.rs  text_buffer.rs  text_object.rs  transaction.rs
src/infrastructure/: file_io.rs  lsp_client.rs  mod.rs  syntax_worker.rs  terminal_ui.rs
