[package]
name = "rim"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = { version = "0.27", features = ["event-stream"] }
ropey = "1.6"
unicode-segmentation = "1"
unicode-width = "0.2"
tokio = { version = "1", features = ["rt", "macros", "sync", "time"] }
futures = "0.3"
tree-sitter = "0.26"
tree-sitter-highlight = "0.26"
tree-sitter-rust = "0.24"
